--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1   # change to your region
+          aws-region: us-east-1
 
       - name: Log in to Amazon ECR
         id: login-ecr
@@ -32,25 +32,30 @@ jobs:
 
       - name: Build, tag, and push image to ECR
         run: |
-          IMAGE_NAME=dbt-job
+          # Friendly local image name
+          LOCAL_IMAGE_NAME=dbt-job
+
+          # Full ECR repository
+          ECR_REPO=822853810208.dkr.ecr.us-east-1.amazonaws.com/ducklakehouse
+
+          # Tag with commit SHA
           IMAGE_TAG=${{ github.sha }}
-          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
-          ECR_REPO=${ECR_REGISTRY}/${IMAGE_NAME}
 
-          echo "Building image..."
-          docker build -t $ECR_REPO:$IMAGE_TAG .
+          echo "Building local image..."
+          docker build -t $LOCAL_IMAGE_NAME .
 
-          echo "Pushing image..."
+          echo "Tagging for ECR..."
+          docker tag $LOCAL_IMAGE_NAME:latest $ECR_REPO:latest
+          docker tag $LOCAL_IMAGE_NAME:latest $ECR_REPO:$IMAGE_TAG
+
+          echo "Pushing to ECR..."
+          docker push $ECR_REPO:latest
           docker push $ECR_REPO:$IMAGE_TAG
 
-          echo "Latest tag for convenience..."
-          docker tag $ECR_REPO:$IMAGE_TAG $ECR_REPO:latest
-          docker push $ECR_REPO:latest
-
+          # Export for ECS task update
           echo "image=$ECR_REPO:$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Update ECS task definition with new image
         run: |
-          # Assume you already have a task definition JSON template checked in (ecs-task.json)
-          sed "s|<IMAGE>|${{ env.image }}|" ecs-task.json > ecs-task-updated.json
+          sed "s|<IMAGE>|${{ env.image }}|" infra/ecs-task.json > ecs-task-updated.json
           aws ecs register-task-definition --cli-input-json file://ecs-task-updated.json
