--- a/.github/workflows/first_dbt_job.yml
+++ b/.github/workflows/first_dbt_job.yml
@@ -18,6 +18,8 @@ jobs:
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
 
+      DBT_COMMAND: "run -s first_team_model"
+
     steps:
       - name: Checkout code (optional, if needed)
         uses: actions/checkout@v4
@@ -40,4 +42,4 @@ jobs:
             -e POSTGRES_USER \
             -e POSTGRES_PASSWORD \
             -e POSTGRES_DATABASE \
-            ghcr.io/liranc14/ducklakehouse:latest run -s first_team_model
+            ghcr.io/liranc14/ducklakehouse:latest $DBT_COMMAND
