--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,16 @@ jobs:
           IMAGE_TAG=dbt-job
 
           echo "Building image..."
-          docker build -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
+              docker build \
+              --build-arg AWS_REGION=${{ secrets.AWS_REGION }} \
+              --build-arg S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
+              --build-arg S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }} \
+              --build-arg POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} \
+              --build-arg POSTGRES_PORT=${{ secrets.POSTGRES_PORT }} \
+              --build-arg POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
+              --build-arg POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
+              --build-arg POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
+              -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
 
           echo "Tagging latest..."
           docker tag $REGISTRY/$IMAGE_NAME:$IMAGE_TAG $REGISTRY/$IMAGE_NAME:latest
