--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,35 +22,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      - name: Build, tag, and push image to GHCR
-        run: |
-          IMAGE_TAG=dbt-job
-
-          echo "Building image..."
-              docker build \
-              --build-arg AWS_REGION=${{ secrets.AWS_REGION }} \
-              --build-arg S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
-              --build-arg S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }} \
-              --build-arg POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} \
-              --build-arg POSTGRES_PORT=${{ secrets.POSTGRES_PORT }} \
-              --build-arg POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
-              --build-arg POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
-              --build-arg POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
-              -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
-
-          echo "Tagging latest..."
-          docker tag $REGISTRY/$IMAGE_NAME:$IMAGE_TAG $REGISTRY/$IMAGE_NAME:latest
-
-          echo "Pushing image to GHCR..."
-          docker push $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-          docker push $REGISTRY/$IMAGE_NAME:latest
-
-          # Export for later jobs
-          echo "image=$REGISTRY/$IMAGE_NAME:$IMAGE_TAG" >> $GITHUB_ENV
+      - name: Build and push Docker image with cache
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          cache-to: type=inline
+          build-args: |
+            AWS_REGION=${{ secrets.AWS_REGION }}
+            S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }}
+            S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }}
+            POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}
+            POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}
+            POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+            POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }}
