--- a/.github/workflows/first_dbt_job.yml
+++ b/.github/workflows/first_dbt_job.yml
@@ -1,13 +1,16 @@
-name: first dbt Job
+name: Daily dbt Job
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # Every day at 08:00 UTC
-  workflow_dispatch:     # Optional: allows manual run
+    - cron: '0 8 * * *'  # 08:00 UTC daily
+  workflow_dispatch:     # allow manual runs
 
 jobs:
   run-dbt-container:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/liranc14/ducklakehouse:latest
+
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
@@ -18,28 +21,6 @@ jobs:
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
 
-      DBT_COMMAND: "run -s first_team_model"
-
     steps:
-      - name: Checkout code (optional, if needed)
-        uses: actions/checkout@v4
-
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
-
-      - name: Run dbt container
-        run: |
-          docker run --rm \
-            -e AWS_REGION \
-            -e S3_ACCESS_KEY_ID \
-            -e S3_SECRET_ACCESS_KEY \
-            -e POSTGRES_HOST \
-            -e POSTGRES_PORT \
-            -e POSTGRES_USER \
-            -e POSTGRES_PASSWORD \
-            -e POSTGRES_DATABASE \
-            ghcr.io/liranc14/ducklakehouse:latest $DBT_COMMAND
+      - name: Run dbt first_team_model
+        run: dbt run -s first_team_model
