--- a/.github/workflows/first_dbt_job.yml
+++ b/.github/workflows/first_dbt_job.yml
@@ -1,16 +1,13 @@
-name: Daily dbt Job
+name: first dbt Job
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # 08:00 UTC daily
-  workflow_dispatch:     # allow manual runs
+    - cron: '0 8 * * *'  # Every day at 08:00 UTC
+  workflow_dispatch:     # Optional: allows manual run
 
 jobs:
   run-dbt-container:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/liranc14/ducklakehouse:latest
-
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
@@ -22,5 +19,25 @@ jobs:
       POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
 
     steps:
-      - name: Run dbt first_team_model
-        run: dbt run -s first_team_model
+      - name: Checkout code (optional, if needed)
+        uses: actions/checkout@v4
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT }}
+
+      - name: Run dbt container
+        run: |
+          docker run --rm \
+            -e AWS_REGION \
+            -e S3_ACCESS_KEY_ID \
+            -e S3_SECRET_ACCESS_KEY \
+            -e POSTGRES_HOST \
+            -e POSTGRES_PORT \
+            -e POSTGRES_USER \
+            -e POSTGRES_PASSWORD \
+            -e POSTGRES_DATABASE \
+            ghcr.io/liranc14/ducklakehouse:latest run -s first_team_model
