--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,27 +30,19 @@ jobs:
           password: ${{ secrets.GHCR_PAT }}
 
       - name: Build, tag, and push image to GHCR
-        run: |
-          IMAGE_TAG=dbt-job
-
-          echo "Building image..."
-              docker build \
-              --build-arg AWS_REGION=${{ secrets.AWS_REGION }} \
-              --build-arg S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
-              --build-arg S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }} \
-              --build-arg POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} \
-              --build-arg POSTGRES_PORT=${{ secrets.POSTGRES_PORT }} \
-              --build-arg POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
-              --build-arg POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
-              --build-arg POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
-              -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
-
-          echo "Tagging latest..."
-          docker tag $REGISTRY/$IMAGE_NAME:$IMAGE_TAG $REGISTRY/$IMAGE_NAME:latest
-
-          echo "Pushing image to GHCR..."
-          docker push $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
-          docker push $REGISTRY/$IMAGE_NAME:latest
-
-          # Export for later jobs
-          echo "image=$REGISTRY/$IMAGE_NAME:$IMAGE_TAG" >> $GITHUB_ENV
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          cache-to: type=inline
+          secrets: |
+            aws_region=${{ secrets.AWS_REGION }}
+            s3_key=${{ secrets.S3_ACCESS_KEY_ID }}
+            s3_secret=${{ secrets.S3_SECRET_ACCESS_KEY }}
+            pg_host=${{ secrets.POSTGRES_HOST }}
+            pg_port=${{ secrets.POSTGRES_PORT }}
+            pg_user=${{ secrets.POSTGRES_USER }}
+            pg_password=${{ secrets.POSTGRES_PASSWORD }}
+            pg_database=${{ secrets.POSTGRES_DATABASE }}
