--- a/.github/workflows/first_dbt_job.yml
+++ b/.github/workflows/first_dbt_job.yml
@@ -2,7 +2,8 @@ name: first dbt Job
 
 on:
   schedule:
-    - cron: '29 8 * * *'  # Every day at 09:00 UTC
+    - cron: '0 9 * * *'  # Every day at 09:00 UTC
+  workflow_dispatch:
 
 jobs:
   run-dbt-container:
