--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -25,13 +25,13 @@ jobs:
         id: changes
         run: |
           # Ensure master branch is fetched locally
-          git fetch origin master:master
+          git fetch origin master
 
           # Detect added/modified models and seeds
-          ADDED_MODIFIED=$(git diff --name-only --diff-filter=AM master -- "models/" "seeds/" | grep -E '\.sql$|\.csv$')
+          ADDED_MODIFIED=$(git diff --name-only --diff-filter=AM origin/master -- "models/" "seeds/" | grep -E '\.sql$|\.csv$')
 
           # Detect deleted models and seeds
-          DELETED=$(git diff --name-only --diff-filter=D master -- "models/" "seeds/" | grep -E '\.sql$|\.csv$')
+          DELETED=$(git diff --name-only --diff-filter=D origin/master -- "models/" "seeds/" | grep -E '\.sql$|\.csv$')
 
           echo "added_or_modified=$ADDED_MODIFIED" >> $GITHUB_OUTPUT
           echo "deleted=$DELETED" >> $GITHUB_OUTPUT
