--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           echo "${{ steps.changes.outputs.added_or_modified }}" | while read path; do
             [ -z "$path" ] && continue
-            base=$(basename "$path" .sql | sed 's/\.csv$//')
+            base=$(basename "$path")
             dir=$(dirname "$path")
 
             if [[ "$dir" == models* ]]; then
